# gqlcli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml  setup.cfg
gqlcli/: __init__.py  fake.py  generator.py  interactive.py  main.py  make_schema.py  playground.py  print.py  utils.py
gqlgen/: generator.py  main.py  utils.py
