[tool.poetry]
name = "gqlcli"
version = "0.3.2"
description = "Auto-generate GraphQL Type, Resolver and Query."
authors = ["syfun <sunyu418@gmail.com>"]
homepage = "https://github.com/syfun"

[tool.poetry.dependencies]
python = ">=3.7"
click = "^7"
graphql-core = ">=3"
python-gql = ">=0.2.3"
requests = "^2.25.1"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gqlcli = 'gqlcli.main:main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

