[tool.poetry]
name = "gqlcli"
version = "0.5.1"
description = "Auto-generate GraphQL Type, Resolver and Query."
authors = ["syfun <sunyu418@gmail.com>"]
homepage = "https://github.com/syfun"

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8"
graphql-core = ">=3"
requests = "^2.25.1"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gqlcli = 'gqlcli.main:main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

